<resources>
    <string name="app_name">Contact Dialer</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_history">History</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_dialer">Dialer</string>
    <string name="action_settings">Settings</string>
    <string name="delete_call_logs">Delete call logs</string>

    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="copyright">Copyright \u00A9 ThuruThuru 2020</string>
    <string name="developers">Developers</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="write_us">Write to us for suggestions</string>
    <string name="privacy">Privacy policy</string>
    <string name="terms">Terms and condition</string>
    <string name="third_party_licenses">Third Party License</string>
    <string name="about_us_description">
        Contact Dialer intents to provide simple interface which connects multiple functionality for contact, messaging and dialing.
    </string>
</resources>