<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_dialer"
        android:icon="@drawable/ic_dialpad_black_24dp"
        android:title="@string/title_dialer" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favourites" />
</menu>