<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            app:cardCornerRadius="10dp"
            android:layout_margin="4dp"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:src="@drawable/ic_call_black_24dp"
                android:background="@color/colorFabFG"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/about_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:padding="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/about_us_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="20dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bottom_line"
                android:gravity="center_vertical"
                android:text="@string/version" />

            <TextView
                android:id="@+id/share_us"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="20dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bottom_line"
                android:gravity="center_vertical"
                android:text="@string/share" />

            <TextView
                android:id="@+id/rate_us"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="20dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bottom_line"
                android:gravity="center_vertical"
                android:text="@string/rate_us" />

            <TextView
                android:id="@+id/write_us"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="20dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bottom_line"
                android:gravity="center_vertical"
                android:text="@string/write_us" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="20dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bottom_line"
                android:gravity="center_vertical"
                android:text="@string/privacy" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="20dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:text="@string/terms" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_vertical|center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/copyv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/copyr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>